# atomic_habits_project

./: .env.example  README.md  docker-compose.yaml  pyproject.toml  test_coverage.txt
config/: settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: fill_location.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py
users/migrations/: 0001_initial.py
